<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pedometer</string>
    <string name="km">km</string>
    <string name="steps_label">steps</string>
    <string name="settings">Settings</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="calories_text">Cal</string>
    <string name="yesterday">Yesterday</string>
    <string name="units">Units sistem</string>
    <string name="years">years</string>
    <string name="distance">Distance</string>
    <string name="gender">Gender</string>
    <string name="zero" translatable="false">0</string>
    <string name="photo_description" translatable="false">photo</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="default_weight">60</string>
    <string name="kg">kg</string>
    <string name="lb_label">lb.</string>
    <string name="ft">ft, in</string>
    <string name="cm">cm</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="miles">mi.</string>
    <string name="test_device" translatable="false">D7C3FED6C0273D67D38E0186CFA3B220</string>
    <string name="banner" translatable="false">ca-app-pub-3931793949981809/1379531579</string>
    <string name="goodbye">Goodbye!</string>
    <string name="startedMessage">OK</string>
    <string name="backgroundImage" translatable="false">image</string>
</resources>
