<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.ancalutu.step_counter2.Settings$PlaceholderFragment"
    >
  <!--  android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">-->

<LinearLayout
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_width="match_parent">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textStyle="bold"
            android:id="@+id/textView_units"
            android:paddingTop="@dimen/activity_vertical_margin"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_units"
            android:paddingBottom="24dp"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textStyle="bold"
            android:id="@+id/textView_gender"/>


        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_sex"
            android:paddingBottom="24dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textStyle="bold"
            android:id="@+id/textView_age"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:id="@+id/editText_age" />
            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/years"></TextView>
            </LinearLayout>






        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textStyle="bold"
            android:id="@+id/textView_height"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/editText_height_cm"
                android:ems="10"
                android:inputType="number"
                android:visibility="gone"
                android:text="170"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/layout_ft_in"
                >

                <EditText
                    android:id="@+id/editText_height_ft"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="'" />

                <EditText
                    android:id="@+id/editText_height_in"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="''" />


            </LinearLayout>

                <Spinner
                    android:id="@+id/spinner_height_units"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content" />



        </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textStyle="bold"
            android:id="@+id/textView_weight"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/editText_weight_kg"
                android:ems="10"
                android:inputType="number"
                android:text="@string/default_weight"
                android:visibility="gone"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/editText_weight_lb"
                android:ems="10"
                android:inputType="number"
                android:text="@string/default_weight"
                android:visibility="visible"/>



            <Spinner
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_weight_units"
                />

    </LinearLayout>



</LinearLayout>

</ScrollView>