<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment">

    <!--
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    -->


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/zero"
                    android:textSize="32sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/steps_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/steps"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/zero"
                    android:textSize="32sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/calories_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/calories_text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:id="@+id/km_mi">


                <TextView
                    android:id="@+id/km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/zero"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/km_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/km"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </LinearLayout>

        </LinearLayout>




    <FrameLayout
        android:id="@+id/frame_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- <ImageView
             android:id="@+id/default_imageView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/photo_description"
             android:scaleType="centerInside"
             android:layout_gravity="center"
             android:src="@drawable/landscape" />-->


    </FrameLayout>


</LinearLayout>
